Thu Sep 12 19:28:07 EDT 2002
	* src/dblib/unittests/t0022.c: test output params
	* src/dblib/unittests/Makefile.am: add t0022
	* src/dblib/dblib.c: implement dbnumrets, and dbret*() funcs
	* src/tds/token.c(tds_process_param_result): load paraminfo struct instead
	  of skipping
Thu Sep 12 15:59:01 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/apps/tsql.c:
	- fix tsql so it will exit on EOF instead of hanging.
	- Problem reported by Leon Brooks <leon@cclinic.com.au> ... thanks!

Thu Sep 12 15:17:01 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/tds_layer.txt include/tds.h.in src/apps/tsql.c src/ctlib/ct.c
	  src/dblib/dblib.c src/dblib/unittests/common.c src/odbc/odbc.c
	  src/pool/member.c src/pool/user.c src/tds/login.c src/tds/mem.c
	  src/tds/token.c src/tds/unittests/common.c:
	- When the server sends a message, first invoke the message handler
	  with the specified message.  Then invoke the error handler with
	  error #20028 (SYBESMSG).  This gives us the behavior that Sybase's
	  libraries produce.
	- This change required modification to the API for
	  tds_connect().  It is now necessary for the caller to allocate a
	  TDSSOCKET with tds_alloc_socket(), and set its parent with
	  tds_set_parent().
	- Fix existing tds_alloc() calls in the pool program.
	- Fix tds_alloc_config() so it can work when a NULL locale is
	  provided.
	
Thu Sep 12 20:59:06 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4: fix compile on Solaris 5.8

Thu Sep 12 11:19:55 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* Makefile.am .cvsignore
	* PWD (removed)
	* PWD.in (added)
	- Create PWD from PWD.in.  Only PWD.in will be maintained in CVS.
	  This makes it easier to avoid accidentally committing passwords
	  to the repository when doing a "cvs commit" from the root of
	  the tree.

Thu Sep 12 10:42:04 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/sybdb.h src/dblib/bcp.c:
	- Rework BCP error handling.  Add two missing severity levels,