@@ -1,4 +1,3 @@
-include_HEADERS = freebcp.h
 bin_PROGRAMS   =    tsql freebcp
 INCLUDES  =    -I$(top_srcdir)/include 
 LDADD     =    ../tds/libtds.la
