@@ -1,6 +1,5 @@
 SUBDIRS		= unittests
 
-include_HEADERS = connectparams.h odbc_util.h convert_tds2sql.h prepare_query.h convert_sql2string.h
 TDSDIR		=	../tds
 TDSOBJECTS	=	$(TDSDIR)/mem.lo $(TDSDIR)/token.lo \
 		$(TDSDIR)/util.lo $(TDSDIR)/login.lo $(TDSDIR)/read.lo \
@@ -14,7 +13,7 @@ lib_LTLIBRARIES	=	libtdsodbc.la
 libtdsodbc_la_SOURCES=	odbc.c connectparams.c convert_tds2sql.c \
 	convert_sql2string.c prepare_query.c odbc_util.c \
 	convert_sql2string.h convert_tds2sql.h odbc_util.h \
-	prepare_query.h
+	prepare_query.h connectparams.h
 EXTRA_DIST = tables.sql
 if UNIXODBC
 libtdsodbc_la_LIBADD=	$(TDSOBJECTS) -lodbcinst $(NETWORK_LIBS) $(LIBICONV)
