@@ -1,8 +1,7 @@
 TESTS		=	t0001
 check_PROGRAMS	=	t0001
 
-t0001_SOURCES	=	t0001.c common.c
+t0001_SOURCES	=	t0001.c common.c common.h
 
 LIBS		=	-lodbc @NETWORK_LIBS@
 INCLUDES	=	-I$(top_srcdir)/include -I$(ODBC_INC)
-include_HEADERS =       common.h
