@@ -1,15 +1,14 @@
 TESTS		=	t0001 t0002 t0003 t0004 t0005 t0006 t0007 t0008
 check_PROGRAMS	=	t0001 t0002 t0003 t0004 t0005 t0006 t0007 t0008
 
-t0001_SOURCES	=	t0001.c common.c
-t0002_SOURCES	=	t0002.c common.c
-t0003_SOURCES	=	t0003.c common.c
-t0004_SOURCES	=	t0004.c common.c
-t0005_SOURCES	=	t0005.c common.c
-t0006_SOURCES	=	t0006.c common.c
+t0001_SOURCES	=	t0001.c common.c common.h
+t0002_SOURCES	=	t0002.c common.c common.h
+t0003_SOURCES	=	t0003.c common.c common.h
+t0004_SOURCES	=	t0004.c common.c common.h
+t0005_SOURCES	=	t0005.c common.c common.h
+t0006_SOURCES	=	t0006.c common.c common.h
 t0007_SOURCES	=	t0007.c
 t0008_SOURCES	=	t0008.c
 
 LIBS		=	../libtds.la @NETWORK_LIBS@
 INCLUDES	=	-I$(top_srcdir)/include
-include_HEADERS =       common.h
